--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "WeedingGame2",
-	"short_name": "WeedingGame2",
+	"name": "除草達人爭霸戰",
+	"short_name": "除草達人爭霸戰",
 	"description": "",
 	"start_url": "index.html",
 	"display": "fullscreen",
